<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/linear" android:layout_width="match_parent"
	android:layout_height="match_parent" android:orientation="vertical">

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<TextView android:id="@+id/id_question_id" android:textSize="8sp"
			android:layout_width="wrap_content" android:gravity="left"
			android:layout_height="wrap_content" android:layout_weight="1.0" />

		<TextView android:id="@+id/id_qa_count" android:layout_width="wrap_content"
			android:layout_weight="1.0" android:gravity="right"
			android:layout_height="wrap_content" />

	</LinearLayout>


	<TextView android:id="@+id/id_text_view_question"
		android:layout_height="13dp" android:maxLines="20" android:scrollbars="vertical"
		android:layout_width="fill_parent" android:gravity="left"
		android:layout_weight="1.0" android:background="@color/dark_brown" />

	<TextView android:id="@+id/id_text_view_answer"
		android:layout_height="13dp" android:maxLines="20" android:scrollbars="vertical"
		android:layout_width="fill_parent" android:gravity="left"
		android:layout_weight="1.0" android:background="@color/darker_brown"
		android:visibility="invisible" />

	<LinearLayout android:layout_width="match_parent"
		android:layout_gravity="center_horizontal" android:layout_height="wrap_content">
		<Button android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:text="@string/btn_prev"
			android:onClick="onButtonClicked" android:id="@+id/button_prev"
			android:layout_weight="1.0"></Button>
		<ToggleButton android:layout_height="wrap_content"
			android:id="@+id/button_answer" android:layout_width="wrap_content"
			android:layout_gravity="center_vertical" android:onClick="onButtonClicked"
			android:text="@string/btn_answer"></ToggleButton>
		<Button android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal" android:id="@+id/button_next"
			android:text="@string/btn_next" android:layout_width="wrap_content"
			android:onClick="onButtonClicked" android:layout_weight="1.0"></Button>
	</LinearLayout>
</LinearLayout>

